--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <meta property="og:title" content="PlantScan AI - Intelligent Plant Identification" />
     <meta property="og:description" content="AI-powered plant analysis with species ID, pest info, care tips and yield predictions" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="PlantScan AI - Intelligent Plant Identification" />
     <meta name="twitter:description" content="AI-powered plant analysis with species ID, pest info, care tips and yield predictions" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" />
 
     <link rel="canonical" href="https://plantscan.lovable.app" />
   </head>
